[package]
name = "raven-ecp"
version = "0.1.0"
edition = "2018"
description = "Send error reports from Compute@Edge to Sentry"

[dependencies]
fastly = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1"
log = "^0.4"
time = { version = "^0.3", features = ["serde-human-readable"] }
uuid = { version = "1.2.2", features = ["v4"] }
url = "2.3.1"
