[package]
name = "compute-rust-sentry"
version = "0.1.3"
edition = "2021"
description = "Send error reports from Compute@Edge to Sentry"
license = "MIT"
repository = "https://github.com/fastly/compute-rust-sentry"
readme = "README.md"

[dependencies]
fastly = "0.11.0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
log = "0.4.22"
time = { version = "^0.3", features = ["serde-human-readable"] }
uuid = { version = "1.11.0", features = ["v4"] }
url = "2.5.2"
